k8s/generated/apps/github-readme-stats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-readme-stats
spec:
  ingressClassName: "nginx"
  rules:
  - host: "github-readme-stats.walnuts.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: github-readme-stats
            port:
              number: 80
